--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "install": "^0.13.0",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
